--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width" />
-        <title>Your Name Here</title>
+        <title>Luke Poag | Portfolio</title>
         <link rel="shortcut icon" type="img/jpg" href="images/coding_icon.png">
         <link rel="stylesheet" type="text/css" href="stylesheet/portfolio.css">
     </head>
@@ -35,7 +35,7 @@
 
         <!-- Video text -->
         <div class="Video_Text">
-            <h1 class="white-text">Your Name's Portfolio</h1>
+            <h1 class="white-text">Luke Poag's Portfolio</h1>
             <strong>
                 <p class="center quote">
                     <q>The computer programmer is a creator of universes for which he alone is the lawgiver.
@@ -129,7 +129,7 @@
                 <h1>GitHub</h1>
                 <p>You can view my coding projects on my GitHub profile here:
                     <br>
-                    <p class="center"><a href="https://github.com/lpoag98" target="_blank">The Tech Academy Github</a></p>
+                    <p class="center"><a href="https://github.com/lpoag98" target="_blank">My GitHub</a></p>
                 </p>
             </div>
             <!-- Right column -->
