--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <!-- Slide 4 of 6 -->
                     <div class="mySlides fade">
                         <img class="Slideshow_Images" src="images/C_Sharp_and_Dot_NET.png">
-                        <div class="text">(COMING SOON) C#, .NET Framework, ASP.NET, MVC, </div>
+                        <div class="text">C#, .NET Framework, ASP.NET, MVC, </div>
                     </div>
                     <!-- Slide 5 of 6 -->
                     <div class="mySlides fade">
