--- a/index.html
+++ b/index.html
@@ -127,9 +127,22 @@
             <!-- Left column -->
             <div class="Column_1">
                 <h1>GitHub</h1>
-                <p>You can view my coding projects on my GitHub profile here:
+                <p>
+                    You ccan view my coding projects on my GitHub profile here:
                     <br>
-                    <p class="center"><a href="https://github.com/lpoag98" target="_blank">My GitHub</a></p>
+                <p class="center"><a href="https://github.com/lpoag98" target="_blank">My GitHub</a></p>
+                </p>
+
+                <p>
+                    You can view my LinkedIn page here:
+                    <br>
+                <p class="center"><a href="https://www.linkedin.com/in/luke-poag-a78214243/" target="_blank">LinkedIn</a></p>
+                </p>
+
+                <p>
+                    You can view my Resume here:
+                    <br>
+                <p class="center"><a href="https://docs.google.com/document/d/1qNZlEf9qJQl2VWr7aMet6s_-vPQJdqdz9kd_LEwqIog/edit?usp=sharing" target="_blank">Resume</a></p>
                 </p>
             </div>
             <!-- Right column -->
